@@ -1,4 +1,5 @@
 HEAD
+    + Added --distribution command line option
     + Avoid negative MAC address error
     + More logs when verbosity is on: test commands and threads wait
     + Bugfix: dist value in anste.conf is no longer ignored
